added NavBar and 'Know More' with icon

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <img class="starRainBackground mobile" src="/images/starRainBackgroundVertical.svg">
         <img src="/images/astroCoder2.gif" class="gif">
         <nav>
-            <a href="">Hero</a>
+            <a href="" style="color: white; font-weight: 500;">Hero</a>
             <a href="">About</a>
             <a href="">Work</a>
             <a href="">Blog</a>
-            <a href="">Contact</a>
+            <a href="" id="contact">Contact</a>
         </nav>
         <div id="container">
             <div id="header">
@@ -31,6 +31,10 @@
                 programming and
                 <span style="font-weight: 500;">robotics</span>
                 background.
+            </div>
+            <div id="knowMoreContainer">
+                <div>Know More</div>
+                <img src="/images/infoIcon.svg">
             </div>
         </div>
     </section>
