made navBar responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="starRainBackground mobile" src="/images/starRainBackgroundVertical.svg">
         <img src="/images/astroCoder2.gif" class="gif">
         <nav>
-            <a href="" style="color: white; font-weight: 500;">Hero</a>
+            <a href="" style="color: white; font-weight: 500;" id="heroNavText">Hero</a>
             <a href="">About</a>
             <a href="">Work</a>
             <a href="">Blog</a>
