--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav>
             <a href="" style="color: white; font-weight: 500;" id="heroNavText">Hero</a>
             <a href="#About">About</a>
-            <a href="">Work</a>
-            <a href="">Blog</a>
-            <a href="" id="contact">Contact</a>
+            <a href="#Work">Work</a>
+            <a href="https://blog.garybricks.com/">Blog</a>
+            <a href="#Contact" id="contact">Contact</a>
         </nav>
         <div id="container">
             <div id="header">
@@ -1608,6 +1608,9 @@
                 </g>
             </g>
         </svg>
+    </section>
+    <section id="Work">
+        <div id="circuitSVGcontainer"></div>
     </section>
 </body>
 
