About Section done for horizontal screen

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="" style="color: white; font-weight: 500;" id="heroNavText">Hero</a>
             <a href="#About">About</a>
             <a href="#Work">Work</a>
-            <a href="https://blog.garybricks.com/">Blog</a>
+            <a href="https://blog.garybricks.com/" target="_blank">Blog</a>
             <a href="#Contact" id="contact">Contact</a>
         </nav>
         <div id="container">
@@ -39,6 +39,53 @@
         </div>
     </section>
     <section id="About">
+        <div id="content">
+            <div id="img">
+                <img src="/images/Gary.png">
+                <img class="decoration" style="top: -20%; right: -30%; scale: 0.8;"
+                    src="/images/aboutDecorations/EllipseLarge.svg" alt="">
+                <img class="decoration" src="/images/aboutDecorations/Cylinder.svg"
+                    style="top:-20%; left:-50%; scale: 0.6;">
+                <img class="decoration" src="/images/aboutDecorations/triangleRed.svg"
+                    style="top:8%; left:-55%; scale: 0.3; z-index: 10;">
+                <img class="decoration" src="/images/aboutDecorations/triangleSharp.svg"
+                    style="bottom:8%; right:-75%; scale: 0.4;">
+                <img class="decoration" src="/images/aboutDecorations/EllipseSmall.svg"
+                    style="bottom:-35%; left:-50%; scale: 0.6;">
+                <img class="decoration" src="/images/aboutDecorations/EllipseGreen.svg"
+                    style="bottom:-15%; right:-70%; scale: 0.1;">
+                <img class="decoration" src="/images/aboutDecorations/triangleBlur.svg"
+                    style="bottom:-15%; right:-50%; scale: 0.6; z-index: 10;">
+            </div>
+            <div id="aboutSocialMedia">
+                <div id="aboutLine"></div>
+            </div>
+            <div>
+                <h1>About Me</h1>
+                <div id="aboutMeText">
+                    Hi there! I'm Gary, a driven and innovative Front-End Software Developer, with a flair for creating
+                    impactful user experiences using technologies like React, Node.js, and Remix.js. My journey in web
+                    development is marked by successful collaborations with individual clients and fellow developers,
+                    consistently delivering tailored front-end solutions.
+                    <p></p>
+                    I’m not just about code though! I’m deeply passionate about sharing knowledge. This passion comes to
+                    life through my YouTube channel GaryBricks3D, where I share my expertise in 3D CAD design with the
+                    Spanish-speaking community, and through the private robotics club RobotGenio where I have worked for
+                    over 5 years as a STEAM Robotics Educator.
+                    <p></p>
+                    My achievements speak to my dedication and skill - I'm a two-time National Informatics Olympiad
+                    Bronze
+                    Medalist (2023 & 2022), a World Robotics Olympiad Bronze Medalist 2020 Junior Individual Surprise
+                    Category, a 3th place in the TMR National RoboCup Rescue Line competition, a proud 5th place in the
+                    2019
+                    MakeX 2019 Global Robotics challenge and more.
+                    <p></p>
+                    <a href="https://www.linkedin.com/in/gary-vladimir/details/honors/" id="SeeAllMeritsBTN"
+                        target="_blank">See All
+                        Merits & Details</a>
+                </div>
+            </div>
+        </div>
         <svg width="2400px" height="1600px" viewBox="0 0 2400 1600" version="1.1" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink">
             <defs>
@@ -1613,5 +1660,6 @@
         <div id="circuitSVGcontainer"></div>
     </section>
 </body>
+<script src="/index.js"></script>
 
 </html>
