added work in progress image

--- a/index.html
+++ b/index.html
@@ -1657,7 +1657,10 @@
         </svg>
     </section>
     <section id="Work">
-        <div id="circuitSVGcontainer"></div>
+        <img src="/images/pageInProgress.svg" id="pageInProgress">
+        <div id="circuitSVGcontainer">
+            .....site under construction
+        </div>
     </section>
 </body>
 <script src="/index.js"></script>
