work/projects section finished for horizontal screens

--- a/index.html
+++ b/index.html
@@ -1657,10 +1657,19 @@
         </svg>
     </section>
     <section id="Work">
-        <img src="/images/pageInProgress.svg" id="pageInProgress">
         <div id="circuitSVGcontainer">
-            .....site under construction
-        </div>
+            <div style="grid-column: span 2 / span 2;">
+                <h1>Work / Projects</h1>
+                <div id="workText">
+                    Don’t be shy! Feel free to check out some of my personal open-source projects, mostly built with the
+                    tools listed below. All repositories are public on GitHub, and Pull Requests are welcomed! Always
+                    looking forward to collaborating!
+                </div>
+                <div id="tools">
+                    <div id="row1"></div>
+                    <div id="row2"></div>
+                </div>
+            </div>
     </section>
 </body>
 <script src="/index.js"></script>
