changed description for the hero, and improved know more button

--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
                 <p>Gary Vladimir</p>
             </div>
             <div id="description">
-                Passionate <span id="green">Front-End</span> <span style="font-weight: 500;">software developer</span>
-                with a competitive
-                programming and
-                <span style="font-weight: 500;">robotics</span>
-                background.
+                <span id="green">Full-Stack Developer</span> with a flair for competitive programming & <span
+                    style="font-weight: 500; color: #F5EA93">robotics Engineering.</span> Expert in 3D CAD design and
+                more.
             </div>
             <a href="#About" id="knowMoreContainer">
                 <div>Know More</div>
