--- a/index.html
+++ b/index.html
@@ -3396,5 +3396,6 @@
 </body>
 <script src=" /index.js">
 </script>
+<script src="https://cdn.jsdelivr.net/npm/smooth-scrollbar@8.8.3/dist/smooth-scrollbar.js"></script>
 
 </html>
