fixed blog button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="" style="color: white; font-weight: 500;" id="heroNavText">Hero</a>
             <a href="#About">About</a>
             <a href="#Work">Work</a>
-            <a href="https://blog.garybricks.com/" target="_blank">Blog</a>
+            <a id="blogLink" href="https://blog.garybricks.com/" target="_blank">Blog</a>
             <a href="#ContactSection" id="contact">Contact</a>
         </nav>
         <div id="container">
