added ease in out transition to see all merits button, and updated front end to full stack

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <div>
                 <h1>About Me</h1>
                 <div id="aboutMeText">
-                    Hi there! I'm Gary, a driven and innovative Front-End Software Developer, with a flair for creating
+                    Hi there! I'm Gary, a driven and innovative Full-Stack Software Developer, with a flair for creating
                     impactful user experiences using technologies like React, Node.js, and Remix.js. My journey in web
                     development is marked by successful collaborations with individual clients and fellow developers,
-                    consistently delivering tailored front-end solutions.
+                    consistently delivering tailored software solutions.
                     <p></p>
                     I’m not just about code though! I’m deeply passionate about sharing knowledge. This passion comes to
                     life through my YouTube channel GaryBricks3D, where I share my expertise in 3D CAD design with the
